...
  const renderEmailStep = () => (
    <View style={styles.stepContainer}>
      <Text style={styles.title}>{t('forgotPasswordScreen.instructions')}</Text>

      <TextInput
        style={styles.input}
        placeholder={t('forgotPasswordScreen.email')}
        placeholderTextColor={Color.black[400]}
        keyboardType="email-address"
        value={state.email}
        onChangeText={setEmail}
        autoCapitalize="none"
        autoCorrect={false}
...
