appId: com.package.identifier
---
- launchApp:
    clearState: true
- assertVisible:
    id: 'loginScreen.title'
- scrollUntilVisible:
    element:
      id: 'loginScreen.forgotPassword'
- tapOn:
    id: 'loginScreen.forgotPassword'
- assertVisible:
    id: 'forgotPasswordScreen.title'
- assertVisible:
    id: 'forgotPasswordScreen.email'
- tapOn:
    id: 'forgotPasswordScreen.email'
- inputText: 'eve.holt@reqres.in'
- assertVisible:
    id: 'forgotPasswordScreen.forgotPassword'
- tapOn:
    id: 'forgotPasswordScreen.forgotPassword'
- stopApp
