appId: com.package.identifier
---
- launchApp:
    clearState: true
- assertVisible:
    id: 'loginScreen.title'
- assertVisible:
    id: 'loginScreen.email'
- tapOn:
    id: 'loginScreen.email'
- inputRandomEmail
- assertVisible:
    id: 'loginScreen.password'
- tapOn:
    id: 'loginScreen.password'
- inputRandomText
- scrollUntilVisible:
    element:
      id: 'loginScreen.login'
- tapOn:
    id: 'loginScreen.login'
- assertNotVisible:
    id: 'dashboardScreen.title'
- stopApp
